Hueterfeste: fix some ATs
* Uebergang von huegel_s02_o01_s1 zu huegel_s03_o01_n1 wieder begehbar
* Falsche Uebergangsnamen in huegel_s04_o01 fixed

refs #343

--- a/mod/area/huegel_s03_o01.git.yml
+++ b/mod/area/huegel_s03_o01.git.yml
@@ -6781,7 +6781,7 @@ TriggerList:
         PointZ: {type: :float, value: 0.025000000372529}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: WP_huegel_o04_o01_n1}
+    LinkedTo: {type: :cexostr, value: WP_huegel_s04_o01_n1}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -6913,7 +6913,7 @@ TriggerList:
         PointZ: {type: :float, value: 0.0224479679018259}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: WP_huegel_o04_o01_n3}
+    LinkedTo: {type: :cexostr, value: WP_huegel_s04_o01_n3}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -6947,31 +6947,6 @@ TriggerList:
 WaypointList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 1}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      value: {}
-
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_huegel_s03_o01_n1}
-    TemplateResRef: {type: :resref, value: ""}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 14.7384}
-    YOrientation: {type: :float, value: -1.0}
-    YPosition: {type: :float, value: 97.2695}
-    ZPosition: {type: :float, value: -0.5669}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
     Appearance: {type: :byte, value: 1}
@@ -7040,13 +7015,38 @@ WaypointList:
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_huegel_s03_o01_s3}
+    Tag: {type: :cexostr, value: WP_huegel_s03_o01_w3}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 1.0}
+    XPosition: {type: :float, value: 2.8761}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 29.5336}
+    ZPosition: {type: :float, value: -0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_huegel_s03_o01_n1}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 74.9407}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 1.9918}
-    ZPosition: {type: :float, value: -0.64}
+    XPosition: {type: :float, value: 14.984}
+    YOrientation: {type: :float, value: -1.0}
+    YPosition: {type: :float, value: 97.0515}
+    ZPosition: {type: :float, value: -0.5452}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
     Appearance: {type: :byte, value: 1}
@@ -7068,10 +7068,10 @@ WaypointList:
     Tag: {type: :cexostr, value: WP_huegel_s03_o01_s1}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 24.084}
+    XPosition: {type: :float, value: 24.3019}
     YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 5.0294}
-    ZPosition: {type: :float, value: -1.4399}
+    YPosition: {type: :float, value: 3.9098}
+    ZPosition: {type: :float, value: -1.6346}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
     Appearance: {type: :byte, value: 1}
@@ -7090,10 +7090,10 @@ WaypointList:
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_huegel_s03_o01_w3}
+    Tag: {type: :cexostr, value: WP_huegel_s03_o01_s3}
     TemplateResRef: {type: :resref, value: ""}
-    XOrientation: {type: :float, value: 1.0}
-    XPosition: {type: :float, value: 2.8761}
-    YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 29.5336}
-    ZPosition: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 75.2459}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 2.0292}
+    ZPosition: {type: :float, value: -0.64}
