--- a/mod/area/huegel_s04_o01.git.yml
+++ b/mod/area/huegel_s04_o01.git.yml
@@ -1696,7 +1696,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 185}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7910,7 +7910,7 @@ TriggerList:
     ScriptOnEnter: {type: :resref, value: ""}
     ScriptOnExit: {type: :resref, value: ""}
     ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: huegel_o04_o01_s3}
+    Tag: {type: :cexostr, value: huegel_s04_o01_s3}
     TemplateResRef: {type: :resref, value: newtransition}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -8012,7 +8012,7 @@ TriggerList:
     ScriptOnEnter: {type: :resref, value: ""}
     ScriptOnExit: {type: :resref, value: ""}
     ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: huegel_o04_o01_s2}
+    Tag: {type: :cexostr, value: huegel_s04_o01_s2}
     TemplateResRef: {type: :resref, value: newtransition}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -8159,7 +8159,7 @@ TriggerList:
     ScriptOnEnter: {type: :resref, value: ""}
     ScriptOnExit: {type: :resref, value: ""}
     ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: huegel_o04_o01_n3}
+    Tag: {type: :cexostr, value: huegel_s04_o01_n3}
     TemplateResRef: {type: :resref, value: newtransition}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -8301,7 +8301,7 @@ TriggerList:
     ScriptOnEnter: {type: :resref, value: ""}
     ScriptOnExit: {type: :resref, value: ""}
     ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: huegel_o04_o01_n1}
+    Tag: {type: :cexostr, value: huegel_s04_o01_n1}
     TemplateResRef: {type: :resref, value: newtransition}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -8337,38 +8337,13 @@ WaypointList:
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_huegel_o04_o01_n3}
-    TemplateResRef: {type: :resref, value: ""}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 75.2872}
-    YOrientation: {type: :float, value: -1.0}
-    YPosition: {type: :float, value: 98.0036}
-    ZPosition: {type: :float, value: -0.0917}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 1}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      value: {}
-
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_huegel_o04_o01_n1}
+    Tag: {type: :cexostr, value: WP_huegel_s04_o01_n1}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: -0.0}
-    XPosition: {type: :float, value: 23.6954}
+    XPosition: {type: :float, value: 24.0032}
     YOrientation: {type: :float, value: -1.0}
-    YPosition: {type: :float, value: 97.5452}
-    ZPosition: {type: :float, value: 0.1054}
+    YPosition: {type: :float, value: 97.606}
+    ZPosition: {type: :float, value: 0.0914}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
     Appearance: {type: :byte, value: 1}
@@ -8387,35 +8362,60 @@ WaypointList:
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_huegel_o04_o01_s3}
+    Tag: {type: :cexostr, value: WP_huegel_s04_o01_n3}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -0.1951}
+    XPosition: {type: :float, value: 75.4772}
+    YOrientation: {type: :float, value: -0.9808}
+    YPosition: {type: :float, value: 98.1605}
+    ZPosition: {type: :float, value: -0.1071}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_huegel_s04_o01_s2}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 77.7248}
+    XPosition: {type: :float, value: 55.6153}
     YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 2.826}
+    YPosition: {type: :float, value: 2.8154}
+    ZPosition: {type: :float, value: -0.56}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_huegel_s04_o01_s3}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 80.7792}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 2.9179}
     ZPosition: {type: :float, value: -0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 1}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      value: {}
-
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_huegel_o04_o01_s2}
-    TemplateResRef: {type: :resref, value: ""}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 56.6592}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 2.7324}
-    ZPosition: {type: :float, value: 0.0362}
