--- a/mod/area/huegel_s02_o01.git.yml
+++ b/mod/area/huegel_s02_o01.git.yml
@@ -6239,7 +6239,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 767}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8492,7 +8492,7 @@ TriggerList:
         PointZ: {type: :float, value: 0.025000000372529}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: WP_huegel_o03_o01_n1}
+    LinkedTo: {type: :cexostr, value: WP_huegel_s03_o01_n1}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -8706,31 +8706,6 @@ WaypointList:
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_huegel_s02_o01_s1}
-    TemplateResRef: {type: :resref, value: ""}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 16.5366}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 2.7761}
-    ZPosition: {type: :float, value: -0.4381}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 1}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      value: {}
-
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 0}
     Tag: {type: :cexostr, value: WP_huegel_s02_o01_s2}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: 0.0}
@@ -8863,3 +8838,28 @@ WaypointList:
     YOrientation: {type: :float, value: -0.1951}
     YPosition: {type: :float, value: 12.2779}
     ZPosition: {type: :float, value: 8.1562}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_huegel_s02_o01_s1}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 16.9153}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 2.7747}
+    ZPosition: {type: :float, value: -0.4277}
