--- a/mod/area/adak_1og.git.yml
+++ b/mod/area/adak_1og.git.yml
@@ -3196,6 +3196,375 @@ Creature List:
     fortbonus: {type: :short, value: 0}
     refbonus: {type: :short, value: 0}
     willbonus: {type: :short, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 4
+    Appearance_Type: {type: :word, value: 1372}
+    BodyBag: {type: :byte, value: 0}
+    CRAdjust: {type: :int, value: 0}
+    Cha: {type: :byte, value: 3}
+    ChallengeRating: {type: :float, value: 5.0}
+    ClassList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Class: {type: :int, value: 13}
+        ClassLevel: {type: :short, value: 4}
+    Con: {type: :byte, value: 10}
+    Conversation: {type: :resref, value: ""}
+    CurrentHitPoints: {type: :short, value: 40}
+    DecayTime: {type: :dword, value: 5000}
+    Deity: {type: :cexostr, value: ""}
+    Description: 
+      type: :cexolocstr
+      value: 
+        0: "Eine fliegende S\xE4ge die hektisch hin und herschwebt. Ein lautes Motorenger\xE4usch k\xFCndigt die S\xE4ge bereits an."
+    Dex: {type: :byte, value: 18}
+    Disarmable: {type: :byte, value: 1}
+    Equip_ItemList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 16384
+        AddCost: {type: :dword, value: 0}
+        BaseItem: {type: :int, value: 71}
+        Charges: {type: :byte, value: 0}
+        Cost: {type: :dword, value: 500}
+        Cursed: {type: :byte, value: 0}
+        DescIdentified: 
+          type: :cexolocstr
+          value: {}
+
+        Description: 
+          type: :cexolocstr
+          value: {}
+
+        Identified: {type: :byte, value: 0}
+        LocalizedName: 
+          type: :cexolocstr
+          str_ref: 13217
+          value: {}
+
+        ModelPart1: {type: :byte, value: 1}
+        Plot: {type: :byte, value: 0}
+        PropertiesList: 
+          type: :list
+          value: 
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 19}
+            CostValue: {type: :word, value: 8}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 77}
+            Subtype: {type: :word, value: 0}
+        StackSize: {type: :word, value: 1}
+        Stolen: {type: :byte, value: 0}
+        Tag: {type: :cexostr, value: NW_IT_CREWPB005}
+        TemplateResRef: {type: :resref, value: nw_it_crewpb005}
+        XOrientation: {type: :float, value: 0.0}
+        XPosition: {type: :float, value: -1.0}
+        YOrientation: {type: :float, value: 1.0}
+        YPosition: {type: :float, value: -1.0}
+        ZPosition: {type: :float, value: -1.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 32768
+        AddCost: {type: :dword, value: 0}
+        BaseItem: {type: :int, value: 71}
+        Charges: {type: :byte, value: 0}
+        Cost: {type: :dword, value: 500}
+        Cursed: {type: :byte, value: 0}
+        DescIdentified: 
+          type: :cexolocstr
+          value: {}
+
+        Description: 
+          type: :cexolocstr
+          value: {}
+
+        Identified: {type: :byte, value: 0}
+        LocalizedName: 
+          type: :cexolocstr
+          str_ref: 13217
+          value: {}
+
+        ModelPart1: {type: :byte, value: 1}
+        Plot: {type: :byte, value: 0}
+        PropertiesList: 
+          type: :list
+          value: 
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 19}
+            CostValue: {type: :word, value: 8}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 77}
+            Subtype: {type: :word, value: 0}
+        StackSize: {type: :word, value: 1}
+        Stolen: {type: :byte, value: 0}
+        Tag: {type: :cexostr, value: NW_IT_CREWPB005}
+        TemplateResRef: {type: :resref, value: nw_it_crewpb005}
+        XOrientation: {type: :float, value: 0.0}
+        XPosition: {type: :float, value: -1.0}
+        YOrientation: {type: :float, value: 1.0}
+        YPosition: {type: :float, value: -1.0}
+        ZPosition: {type: :float, value: -1.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 65536
+        AddCost: {type: :dword, value: 0}
+        BaseItem: {type: :int, value: 71}
+        Charges: {type: :byte, value: 0}
+        Cost: {type: :dword, value: 500}
+        Cursed: {type: :byte, value: 0}
+        DescIdentified: 
+          type: :cexolocstr
+          value: {}
+
+        Description: 
+          type: :cexolocstr
+          value: {}
+
+        Identified: {type: :byte, value: 0}
+        LocalizedName: 
+          type: :cexolocstr
+          str_ref: 13217
+          value: {}
+
+        ModelPart1: {type: :byte, value: 1}
+        Plot: {type: :byte, value: 0}
+        PropertiesList: 
+          type: :list
+          value: 
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 19}
+            CostValue: {type: :word, value: 8}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 77}
+            Subtype: {type: :word, value: 0}
+        StackSize: {type: :word, value: 1}
+        Stolen: {type: :byte, value: 0}
+        Tag: {type: :cexostr, value: NW_IT_CREWPB005}
+        TemplateResRef: {type: :resref, value: nw_it_crewpb005}
+        XOrientation: {type: :float, value: 0.0}
+        XPosition: {type: :float, value: -1.0}
+        YOrientation: {type: :float, value: 1.0}
+        YPosition: {type: :float, value: -1.0}
+        ZPosition: {type: :float, value: -1.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 131072
+        AddCost: {type: :dword, value: 0}
+        BaseItem: {type: :int, value: 73}
+        Charges: {type: :byte, value: 0}
+        Cost: {type: :dword, value: 961000}
+        Cursed: {type: :byte, value: 0}
+        DescIdentified: 
+          type: :cexolocstr
+          value: {}
+
+        Description: 
+          type: :cexolocstr
+          value: {}
+
+        Identified: {type: :byte, value: 0}
+        LocalizedName: 
+          type: :cexolocstr
+          str_ref: 13156
+          value: {}
+
+        ModelPart1: {type: :byte, value: 1}
+        Plot: {type: :byte, value: 0}
+        PropertiesList: 
+          type: :list
+          value: 
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 0}
+            CostValue: {type: :word, value: 0}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 37}
+            Subtype: {type: :word, value: 4}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 0}
+            CostValue: {type: :word, value: 0}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 37}
+            Subtype: {type: :word, value: 8}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 0}
+            CostValue: {type: :word, value: 0}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 37}
+            Subtype: {type: :word, value: 9}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 0}
+            CostValue: {type: :word, value: 0}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 37}
+            Subtype: {type: :word, value: 1}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 0}
+            CostValue: {type: :word, value: 0}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 37}
+            Subtype: {type: :word, value: 2}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 0}
+            CostValue: {type: :word, value: 0}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 37}
+            Subtype: {type: :word, value: 7}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 0}
+            CostValue: {type: :word, value: 0}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 255}
+            PropertyName: {type: :word, value: 37}
+            Subtype: {type: :word, value: 3}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            ChanceAppear: {type: :byte, value: 100}
+            CostTable: {type: :byte, value: 0}
+            CostValue: {type: :word, value: 0}
+            Param1: {type: :byte, value: 255}
+            Param1Value: {type: :byte, value: 0}
+            PropertyName: {type: :word, value: 37}
+            Subtype: {type: :word, value: 0}
+        StackSize: {type: :word, value: 1}
+        Stolen: {type: :byte, value: 0}
+        Tag: {type: :cexostr, value: NW_IT_CREITEMCON}
+        TemplateResRef: {type: :resref, value: nw_it_creitemcon}
+        XOrientation: {type: :float, value: 0.0}
+        XPosition: {type: :float, value: -1.0}
+        YOrientation: {type: :float, value: 1.0}
+        YPosition: {type: :float, value: -1.0}
+        ZPosition: {type: :float, value: -1.0}
+    FactionID: {type: :word, value: 4}
+    FeatList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 10}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 223}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
+    FirstName: 
+      type: :cexolocstr
+      value: 
+        0: "Fliegende S\xE4ge"
+    Gender: {type: :byte, value: 0}
+    GoodEvil: {type: :byte, value: 50}
+    HitPoints: {type: :short, value: 40}
+    Int: {type: :byte, value: 10}
+    Interruptable: {type: :byte, value: 1}
+    IsImmortal: {type: :byte, value: 0}
+    IsPC: {type: :byte, value: 0}
+    LastName: 
+      type: :cexolocstr
+      value: 
+        4: ""
+    LawfulChaotic: {type: :byte, value: 50}
+    Lootable: {type: :byte, value: 0}
+    MaxHitPoints: {type: :short, value: 40}
+    NaturalAC: {type: :byte, value: 3}
+    NoPermDeath: {type: :byte, value: 1}
+    PerceptionRange: {type: :byte, value: 11}
+    Phenotype: {type: :int, value: 0}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 235}
+    Race: {type: :byte, value: 10}
+    ScriptAttacked: {type: :resref, value: x2_def_attacked}
+    ScriptDamaged: {type: :resref, value: x2_def_ondamage}
+    ScriptDeath: {type: :resref, value: x2_def_ondeath}
+    ScriptDialogue: {type: :resref, value: x2_def_onconv}
+    ScriptDisturbed: {type: :resref, value: x2_def_ondisturb}
+    ScriptEndRound: {type: :resref, value: x2_def_endcombat}
+    ScriptHeartbeat: {type: :resref, value: x2_def_heartbeat}
+    ScriptOnBlocked: {type: :resref, value: x2_def_onblocked}
+    ScriptOnNotice: {type: :resref, value: x2_def_percept}
+    ScriptRested: {type: :resref, value: x2_def_rested}
+    ScriptSpawn: {type: :resref, value: x2_def_spawn}
+    ScriptSpellAt: {type: :resref, value: x2_def_spellcast}
+    ScriptUserDefine: {type: :resref, value: x2_def_userdef}
+    SkillList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 10}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 5}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 5}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 10}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+    SoundSetFile: {type: :word, value: 65535}
+    SpecAbilityList: 
+      type: :list
+      value: []
+
+    StartingPackage: {type: :byte, value: 75}
+    Str: {type: :byte, value: 14}
+    Subrace: {type: :cexostr, value: ""}
+    Tag: {type: :cexostr, value: mechanoSaw}
+    Tail_New: {type: :dword, value: 0}
+    TemplateList: 
+      type: :list
+      value: []
+
+    TemplateResRef: {type: :resref, value: mechano_saw}
+    WalkRate: {type: :int, value: 5}
+    Wings_New: {type: :dword, value: 0}
+    Wis: {type: :byte, value: 10}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 36.045}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 46.2335}
+    ZPosition: {type: :float, value: -0.0}
+    fortbonus: {type: :short, value: 0}
+    refbonus: {type: :short, value: 0}
+    willbonus: {type: :short, value: 0}
 Door List: 
   type: :list
   value: 
@@ -5090,7 +5459,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 311}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7300,7 +7669,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 253}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -13189,7 +13558,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 289}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -15139,7 +15508,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 370}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -15416,7 +15785,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 157}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -15479,7 +15848,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 157}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -15542,7 +15911,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 157}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
