--- a/mod/uti/skin_drag_bla.uti.yml
+++ b/mod/uti/skin_drag_bla.uti.yml
@@ -5,7 +5,7 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 73}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 1587225}
+Cost: {type: :dword, value: 1792675}
 Cursed: {type: :byte, value: 1}
 DescIdentified: 
   type: :cexolocstr
@@ -13,14 +13,14 @@ DescIdentified:
 
 Description: 
   type: :cexolocstr
-  value: 
-    4: ""
+  value: {}
+
 Identified: {type: :byte, value: 0}
 LocalizedName: 
   type: :cexolocstr
   str_ref: 13178
   value: 
-    0: "Polymorph: Roter Drache, Eigenschaften"
+    0: "Polymorph: Schwarzer Drache, Eigenschaften"
 ModelPart1: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 14}
 Plot: {type: :byte, value: 0}
@@ -96,9 +96,9 @@ PropertiesList:
     CostTable: {type: :byte, value: 5}
     CostValue: {type: :word, value: 7}
     Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 255}
+    Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 20}
-    Subtype: {type: :word, value: 10}
+    Subtype: {type: :word, value: 6}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -111,12 +111,12 @@ PropertiesList:
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 22}
-    CostValue: {type: :word, value: 4}
+    CostTable: {type: :byte, value: 6}
+    CostValue: {type: :word, value: 1}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 255}
-    PropertyName: {type: :word, value: 24}
-    Subtype: {type: :word, value: 7}
+    PropertyName: {type: :word, value: 22}
+    Subtype: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
@@ -132,10 +132,10 @@ PropertiesList:
     CostTable: {type: :byte, value: 11}
     CostValue: {type: :word, value: 6}
     Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
+    Param1Value: {type: :byte, value: 255}
     PropertyName: {type: :word, value: 39}
     Subtype: {type: :word, value: 0}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: skin_drag_red}
-TemplateResRef: {type: :resref, value: skin_drag_red}
+Tag: {type: :cexostr, value: skin_drag_bla}
+TemplateResRef: {type: :resref, value: skin_drag_bla}
