--- a/mod/uti/skin_drag_gld.uti.yml
+++ b/mod/uti/skin_drag_gld.uti.yml
@@ -20,7 +20,7 @@ LocalizedName:
   type: :cexolocstr
   str_ref: 13178
   value: 
-    0: "Polymorph: Roter Drache, Eigenschaften"
+    0: "Polymorph: Goldener Drache, Eigenschaften"
 ModelPart1: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 14}
 Plot: {type: :byte, value: 0}
@@ -137,5 +137,5 @@ PropertiesList:
     Subtype: {type: :word, value: 0}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: skin_drag_red}
-TemplateResRef: {type: :resref, value: skin_drag_red}
+Tag: {type: :cexostr, value: skin_drag_gld}
+TemplateResRef: {type: :resref, value: skin_drag_gld}
