--- a/mod/uti/skin_drag_sha.uti.yml
+++ b/mod/uti/skin_drag_sha.uti.yml
@@ -5,7 +5,7 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 73}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 983449}
+Cost: {type: :dword, value: 1045875}
 Cursed: {type: :byte, value: 1}
 DescIdentified: 
   type: :cexolocstr
@@ -52,13 +52,31 @@ PropertiesList:
     CostValue: {type: :word, value: 0}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
+    PropertyName: {type: :word, value: 12}
+    Subtype: {type: :word, value: 20}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 0
+    ChanceAppear: {type: :byte, value: 100}
+    CostTable: {type: :byte, value: 0}
+    CostValue: {type: :word, value: 0}
+    Param1: {type: :byte, value: 255}
+    Param1Value: {type: :byte, value: 0}
+    PropertyName: {type: :word, value: 12}
+    Subtype: {type: :word, value: 18}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 0
+    ChanceAppear: {type: :byte, value: 100}
+    CostTable: {type: :byte, value: 0}
+    CostValue: {type: :word, value: 0}
+    Param1: {type: :byte, value: 255}
+    Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 26}
     Subtype: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
     CostTable: {type: :byte, value: 25}
-    CostValue: {type: :word, value: 19}
+    CostValue: {type: :word, value: 21}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 0}
     PropertyName: {type: :word, value: 52}
@@ -94,7 +112,7 @@ PropertiesList:
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
     CostTable: {type: :byte, value: 6}
-    CostValue: {type: :word, value: 2}
+    CostValue: {type: :word, value: 1}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 255}
     PropertyName: {type: :word, value: 22}
@@ -112,7 +130,7 @@ PropertiesList:
     __struct_id: 0
     ChanceAppear: {type: :byte, value: 100}
     CostTable: {type: :byte, value: 11}
-    CostValue: {type: :word, value: 7}
+    CostValue: {type: :word, value: 6}
     Param1: {type: :byte, value: 255}
     Param1Value: {type: :byte, value: 255}
     PropertyName: {type: :word, value: 39}
