--- a/mod/uti/skin_jelly.uti.yml
+++ b/mod/uti/skin_jelly.uti.yml
@@ -20,7 +20,7 @@ LocalizedName:
   type: :cexolocstr
   str_ref: 13178
   value: 
-    0: Galertwuerfel, Eigenschaften
+    0: "Polymorph: Galertwuerfel, Eigenschaften"
 ModelPart1: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 14}
 Plot: {type: :byte, value: 0}
