--- a/mod/area/pandemonium.are.yml
+++ b/mod/area/pandemonium.are.yml
@@ -20,9 +20,9 @@ LightingScheme: {type: :byte, value: 21}
 LoadScreenID: {type: :word, value: 0}
 ModListenCheck: {type: :int, value: 0}
 ModSpotCheck: {type: :int, value: 0}
-MoonAmbientColor: {type: :dword, value: 2631720}
+MoonAmbientColor: {type: :dword, value: 0}
 MoonDiffuseColor: {type: :dword, value: 0}
-MoonFogAmount: {type: :byte, value: 0}
+MoonFogAmount: {type: :byte, value: 10}
 MoonFogColor: {type: :dword, value: 0}
 MoonShadows: {type: :byte, value: 0}
 Name: 
@@ -186,8 +186,8 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 29}
-    Tile_MainLight1: {type: :byte, value: 27}
-    Tile_MainLight2: {type: :byte, value: 27}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 3}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
@@ -210,7 +210,7 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 28}
-    Tile_MainLight1: {type: :byte, value: 27}
+    Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 3}
     Tile_SrcLight1: {type: :byte, value: 0}
@@ -282,7 +282,7 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 139}
-    Tile_MainLight1: {type: :byte, value: 27}
+    Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 0}
     Tile_SrcLight1: {type: :byte, value: 0}
@@ -306,7 +306,7 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 139}
-    Tile_MainLight1: {type: :byte, value: 31}
+    Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 2}
     Tile_SrcLight1: {type: :byte, value: 0}
@@ -378,8 +378,8 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 139}
-    Tile_MainLight1: {type: :byte, value: 27}
-    Tile_MainLight2: {type: :byte, value: 31}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 0}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
@@ -402,7 +402,7 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 139}
-    Tile_MainLight1: {type: :byte, value: 27}
+    Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 2}
     Tile_SrcLight1: {type: :byte, value: 0}
@@ -462,7 +462,7 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 10}
-    Tile_MainLight1: {type: :byte, value: 27}
+    Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 1}
     Tile_SrcLight1: {type: :byte, value: 0}
@@ -474,8 +474,8 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 28}
-    Tile_MainLight1: {type: :byte, value: 27}
-    Tile_MainLight2: {type: :byte, value: 31}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 1}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
@@ -498,8 +498,8 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 29}
-    Tile_MainLight1: {type: :byte, value: 27}
-    Tile_MainLight2: {type: :byte, value: 28}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 1}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
