--- a/mod/area/gabel_sw.git.yml
+++ b/mod/area/gabel_sw.git.yml
@@ -40364,7 +40364,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: Pandemonium
+        0: Pandämonium
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
